changed z-index of text field hints to avoid need to click twice to start typing

--- a/apps/tasks/english.lproj/default_theme/body.css
+++ b/apps/tasks/english.lproj/default_theme/body.css
@@ -49,6 +49,10 @@ body {
 	line-height: 12px !important;
 }
 
+.sc-text-field-view .sc-hint {
+  z-index: 0;
+}
+
 .sc-view.sc-checkbox-view span {
   font-size: 10px !important;
   text-align: left !important;
